      DCCP, EGP: Replace custom code with tok2str()
      UDP: Clean up address and port printing.
      AppleTalk: Declutter appletalk.h.
      IEEE 802.11: Simplify handle_action().
      Provide GET_ macros for 4-byte and 8-byte floating-point numbers
        and use them rather than custom code
    Building and testing:
      autoconf: Update install-sh script to the latest available version.
      autoconf: Remove detection of early IPv6 stacks.
      Detect OS IPv6 support using AF_INET6 only.
      Remove all remaining support for BSD/OS, IRIX, {OSF/1, Digital Unix,
        Tru64 Unix}, SINIX and Ultrix.
      Fix compiling on GNU/Hurd.
      Make illumos build warning-free.
      Fix propagation of cc_werr_cflags() output.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.5 tcpdump release (so far!)
    Fix:
      Use the buffer stack for de-escaping PPP; fixes CVE-2024-2397.
    Refine protocol decoding for:
      Arista: Use the test .pcap file from pull request #955 (HwInfo).
      BGP: Fix an undefined behavior when it tries to parse a too-short packet.
      CARP: Print the protocol name before any GET_().
      CDP: only hex-dump unknown TLVs in verbose mode.
      DHCP: parse the SZTP redirect tag.
      DHCPv6: client-id/server-id DUID type 2 correction; parse the user class,
        boot file URL, and SZTP redirect options; add DUID-UUID printing
        (RFC6355).
      DNS: Detect and correctly handle too-short URI RRs.
      EAP: Assign ndo_protocol in the eap_print() function.
      Frame Relay (Multilink) : Fix the Timestamp Information Element printing
      ICMPv6: Fix printing the Home Agent Address Discovery Reply Message
      IEEE 802.11: no need for an element ID in the structures for IEs, make
        the length in the IE structures a u_int, include the "TA" field while
        printing Block Ack Control frame.
      IP: Enable TSO (TCP Segmentation Offload) support; fix printing invalid